test/files/neg/t276.scala
class Foo {
  type Bar = (Int, Int)
}

class FooFoo extends Foo {
  class Bar
}
