test/files/neg/t276.check
t276.scala:6: error: overriding type Bar = (Int, Int) (defined in class Foo);
 class Bar extends AnyRef cannot be used here - classes can only override abstract types
  class Bar
        ^
one error found
